# flowsurface

./: .claudeignore  .gitignore  .mcp.json  ADDING_CUSTOM_INDICATORS.md  AGENTS.md  AGENT_CONTEXT.md  BUBBLE_INDICATOR_RESEARCH.md  CLAUDE.md  Cargo.toml  FLAGS.md  GRANULAR_AGENTS.yaml  INDICATOR_DOCS.md  PLAN.md  PROMPT.md  README.md  RULES.md  SUMMARY.yaml  explore_db.sql  index.html  monitor_db.sh
.cargo/: config.toml
.claude/: .session
.claude/agents/: aggregator_specialist.md  app_architect.md  architect.md  audio_specialist.md  backend_developer.md  build_specialist.md  changes.md  chart_architect.md  chart_renderer.md  config_manager.md  data_architect.md  database_architect.md  documentation.md  documentation_specialist.md  exchange_adapters.md  exchange_architect.md  frontend_developer.md  github.md  indicator_developer.md  integration_tester.md  layout_specialist.md  market_data_specialist.md  modal_specialist.md  performance_optimizer.md  reviewer.md  scaling_specialist.md  security_auditor.md  sidebar_specialist.md  tester.md  theme_designer.md  validator.md  websocket_specialist.md  widget_developer.md
.claude/commands/: changes.md  documentation.md  main.md
.claude/commands/prompts/: PLAN_TEMPLATE.md
.claude/data/sessions/: 00a4430b-6dad-40f0-a08d-4f5f28466232.json  00dcb082-8fb7-4b9b-bae3-836b5a2cf1a3.json  024d5f4d-7c94-4ce8-b2ef-26ac6f8a31d9.json  02a15861-13cd-4a11-8005-df91aebb69ca.json  047c4e10-4f80-4aa1-b53e-e8aa4a3121b6.json  051ef695-5c8c-425a-b7b9-e39fe6801654.json  08197f85-d337-4cfe-84c8-c8c74b8b1aa9.json  081f2ea4-0e18-4a51-bb34-54666ae651b4.json  0847b15d-4ccd-4574-8621-9bb51fc80b13.json  086a7d5a-8b24-4b09-9823-a6783fd1e6bf.json  09a129e5-d073-4baa-913d-f1473d92eac6.json  0bcb3721-d0a5-498d-b214-8d8cd91034bd.json  0d491832-a8fd-4ade-8863-0af6b8a1c3b9.json  0d8c9f27-0439-4508-b40e-2cdde0d0bca6.json  0f00aa82-142d-4fb2-b443-024b87365e05.json  108d6f0e-aed6-43ec-b8bf-887315228fc1.json  11cc2d0e-6d82-4b9b-928b-a08555ff8600.json  1251980d-51c5-4bdf-9423-050f3615574a.json  1513854f-9a67-47ad-ae38-538c94d837d1.json  165b0102-0763-43d5-ab85-24d623931a98.json  16f0aaa0-262c-4c74-8a1b-a7c18f75f77a.json  180de67c-e047-466f-a0c5-973d377bb002.json  1b5f9854-80b5-4bb4-a28f-4a7a75dae300.json  1bb38670-f267-474d-be60-9d385b7aedde.json  (+185 more)
.claude/hooks/: pre_tool_use.py  statusline.py  stop.py  user_prompt_submit.py
.claude/output-styles/: tts-summary.md
.claude/workflows/: documentation.yaml
DOCS/: ASTER_API.md  ASTER_IMPL.md  DATA_DOWNLOAD.md  DATA_STORAGE.md  DUCKDB_IMPL_DOCS.md  GENERAL_CONTEXT.md  HISTORICAL_DATA_API_RESEARCH.md  PROVIDER_IMPL_DOCS.md
DOCS/FOOT/: FOOT.md  FOOT_SUMMARY.md
SCRIPTS/: browse_rows.sql  research.py  test7.py  test_duckdb.sh  watch_persistence.sh
TRASH/: DATABASE_VIEW_IMPLEMENTATION_PLAN.md  DATABASE_VIEW_RESEARCH.md  PLAN_YATA_ALTERNATIVE.md  tasks.yaml  tasks_overview.yaml
benches/: db_benchmarks.rs
data/: Cargo.toml
data/proptest-regressions/tests/: property.txt
data/src/: audio.rs  chart.rs  lib.rs  log.rs  tickers_table.rs  util.rs
data/src/aggr/: ticks.rs  time.rs
data/src/chart/: heatmap.rs  indicator.rs  kline.rs  ladder.rs  timeandsales.rs
data/src/config/: sidebar.rs  state.rs  theme.rs
data/src/db/: error.rs  health.rs  helpers.rs  metrics.rs  migrations.rs  mod.rs  query_cache.rs  schema.sql
data/src/db/crud/: depth.rs  footprint.rs  klines.rs  mod.rs  order_runs.rs  trades.rs
data/src/db/migration/: archive.rs  backup.rs  depth.rs  helpers.rs  mod.rs  progress.rs  timeseries.rs  verification.rs
data/src/layout/: pane.rs
data/src/tests/: integration.rs  mod.rs  property.rs
data/src/tests/common/: assertions.rs  fixtures.rs  mod.rs
data/tests/: migration_tests.rs  performance_tests.rs
docs/: README.md  api-reference.md  technical-architecture.md  user-guide.md
docs/agents/: file_map.yaml  quick_reference.yaml  task_patterns.yaml  validation_rules.yaml
exchange/: Cargo.toml
exchange/src/: adapter.rs  connect.rs  depth.rs  lib.rs  limiter.rs  util.rs
exchange/src/adapter/: aster.rs  binance.rs  bybit.rs  hyperliquid.rs  okex.rs
my-book/: book.toml
my-book/src/: FETCH_FOOT.md  SUMMARY.md
src/: chart.rs  layout.rs  main.rs  modal.rs  style.rs  widget.rs  window.rs
src/chart/: heatmap.rs  indicator.rs  kline.rs  scale.rs
src/chart/indicator/: kline.rs  plot.rs  (+2 more)
src/modal/: audio.rs  database_manager.rs  layout_manager.rs  theme_editor.rs
src/screen/: dashboard.rs
src/widget/: color_picker.rs  column_drag.rs  decorate.rs  multi_split.rs  toast.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/integration/: db_pipeline_test.rs  mod.rs
tests/property/: mod.rs  roundtrip_test.rs
(+12 files in other folders)
