[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
serde.workspace = true
iced_core.workspace = true
chrono.workspace = true
ordered-float.workspace = true
log.workspace = true
thiserror.workspace = true
regex.workspace = true
palette.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
dirs-next = "2.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.20.1", default-features = false, features = [ "wav" ]}
open = "5.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "Storage", "Window", "Document"] }

exchange = { version = "0.1.0", path = "../exchange" }