[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
serde.workspace = true
iced_core.workspace = true
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
regex.workspace = true
palette.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
dirs-next = "2.0.0"
rodio = { version = "0.20.1", default-features = false, features = [ "wav" ]}
open = "5.3.2"
duckdb = { version = "1.1.4", features = ["bundled"] }
zip = "2.2.2"
csv = "1.3"
tokio = { version = "1.42", features = ["rt", "time", "macros"] }

exchange = { version = "0.1.0", path = "../exchange" }

[dev-dependencies]
tempfile = "3.14.0"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"